--- a/RPi_FieldController/.classpath
+++ b/RPi_FieldController/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.paho.client.mqttv3_1.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jython-standalone-2.7.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
